--- a/files/homeassistant/hacs_version/individual_control.yaml
+++ b/files/homeassistant/hacs_version/individual_control.yaml
@@ -66,8 +66,8 @@ cards:
               box-shadow: none !important;
               background-color: rgba(0,0,0,0);
               border: none;
-              --pbs-button-color: {% if is_state('select.{HA_PRINTER_DEVICE_NAME}_printing_speed', 'silent') %} yellow; {% else %} grey; {% endif %}
-              --paper-item-icon-color: {% if is_state('select.{HA_PRINTER_DEVICE_NAME}_printing_speed', 'silent') %} yellow; {% else %} grey; {% endif %}
+              --pbs-button-color: {% if is_state('select.{HA_PRINTER_DEVICE_NAME}_printing_speed', 'Silent') or is_state('select.{HA_PRINTER_DEVICE_NAME}_printing_speed', 'silent') %} yellow; {% else %} grey; {% endif %}
+              --paper-item-icon-color: {% if is_state('select.{HA_PRINTER_DEVICE_NAME}_printing_speed', 'Silent') or is_state('select.{HA_PRINTER_DEVICE_NAME}_printing_speed', 'silent') %} yellow; {% else %} grey; {% endif %}
             }
       - type: custom:hui-element
         card_type: button
@@ -87,7 +87,7 @@ cards:
               box-shadow: none !important;
               background-color: rgba(0,0,0,0);
               border: none;
-              --paper-item-icon-color: {% if is_state('select.{HA_PRINTER_DEVICE_NAME}_printing_speed', 'standard') %} yellow; {% else %} grey; {% endif %}
+              --paper-item-icon-color: {% if is_state('select.{HA_PRINTER_DEVICE_NAME}_printing_speed', 'Standard') or is_state('select.{HA_PRINTER_DEVICE_NAME}_printing_speed', 'standard') %} yellow; {% else %} grey; {% endif %}
             }
       - type: custom:hui-element
         card_type: button
@@ -107,7 +107,7 @@ cards:
               box-shadow: none !important;
               background-color: rgba(0,0,0,0);
               border: none;
-              --paper-item-icon-color: {% if is_state('select.{HA_PRINTER_DEVICE_NAME}_printing_speed', 'sport') %} yellow; {% else %} grey; {% endif %}
+              --paper-item-icon-color: {% if is_state('select.{HA_PRINTER_DEVICE_NAME}_printing_speed', 'Sport') or is_state('select.{HA_PRINTER_DEVICE_NAME}_printing_speed', 'sport') %} yellow; {% else %} grey; {% endif %}
             }
       - type: custom:hui-element
         card_type: button
@@ -127,7 +127,7 @@ cards:
               box-shadow: none !important;
               background-color: rgba(0,0,0,0);
               border: none;
-              --paper-item-icon-color: {% if is_state('select.{HA_PRINTER_DEVICE_NAME}_printing_speed', 'ludicrous') %} yellow; {% else %} grey; {% endif %}
+              --paper-item-icon-color: {% if is_state('select.{HA_PRINTER_DEVICE_NAME}_printing_speed', 'Ludicrous') or is_state('select.{HA_PRINTER_DEVICE_NAME}_printing_speed', 'ludicrous') %} yellow; {% else %} grey; {% endif %}
             }
   - type: custom:gap-card
     height: 5
@@ -140,26 +140,47 @@ cards:
           start_entity: button.{HA_PRINTER_DEVICE_NAME}_resume_printing
         entity: sensor.{HA_PRINTER_DEVICE_NAME}_print_status
         name: |
-          [[[  if (entity.state == 'running') return "Pause";
-           else if (entity.state =='pause') return "Resume";
+          [[[  if (entity.state.upper == 'RUNNING') return "Pause";
+           else if (entity.state.upper == 'PAUSE') return "Resume";
           else return '';  ]]]
         state:
+          - value: RUNNING
+            icon: mdi:pause
+            color: orange
           - value: running
             icon: mdi:pause
+            color: orange
+          - value: PAUSE
+            icon: mdi:play
             color: orange
           - value: pause
             icon: mdi:play
             color: orange
+          - value: OFFLINE
+            icon: mdi:void
+            color: grey
           - value: offline
+            icon: mdi:void
+            color: grey
+          - value: IDLE
             icon: mdi:void
             color: grey
           - value: idle
             icon: mdi:void
             color: grey
+          - value: FAILED
+            icon: mdi:void
+            color: grey
           - value: failed
             icon: mdi:void
             color: grey
+          - value: FINISH
+            icon: mdi:void
+            color: grey
           - value: finish
+            icon: mdi:void
+            color: grey
+          - value: PREPARE
             icon: mdi:void
             color: grey
           - value: prepare
@@ -167,7 +188,7 @@ cards:
             color: grey
         tap_action:
           action: >
-            [[[ if (entity.state == 'running' || entity.state == 'pause') return
+            [[[ if (entity.state.upper == 'RUNNING' || entity.state.upper == 'PAUSE') return
             "call-service"; 
 
             else return "none";
@@ -176,9 +197,10 @@ cards:
           service: button.press
           service_data:
             entity_id: >
-              [[[ if (states['sensor.{HA_PRINTER_DEVICE_NAME}_print_status'].state == 'running') 
+              [[[ if (states['sensor.{HA_PRINTER_DEVICE_NAME}_print_status'].state.upper ==
+              'RUNNING') 
                   return variables.pause_entity; 
-                  if (states['sensor.{HA_PRINTER_DEVICE_NAME}_print_status'].state == 'pause') 
+                  if (states['sensor.{HA_PRINTER_DEVICE_NAME}_print_status'].state.upper == 'PAUSE') 
                   return variables.start_entity; 
                 else return "";
                 ]]]
@@ -188,34 +210,55 @@ cards:
               box-shadow: none !important;
               background-color: rgba(0,0,0,0);
               border: none;
-              --paper-item-icon-color: {% if is_state('sensor.{HA_PRINTER_DEVICE_NAME}_print_status', 'running') or is_state('sensor.{HA_PRINTER_DEVICE_NAME}_print_status', 'pause') %} orange; {% else %} grey; {% endif %}            
+              --paper-item-icon-color: {% if is_state('sensor.{HA_PRINTER_DEVICE_NAME}_print_status', 'RUNNING') or is_state('sensor.{HA_PRINTER_DEVICE_NAME}_print_status', 'PAUSE') or is_state('sensor.{HA_PRINTER_DEVICE_NAME}_print_status', 'running') or is_state('sensor.{HA_PRINTER_DEVICE_NAME}_print_status', 'pause') %} orange; {% else %} grey; {% endif %}    
             }
       - type: custom:gap-card
       - type: custom:button-card
         entity: sensor.{HA_PRINTER_DEVICE_NAME}_print_status
         name: |
-          [[[  if (entity.state == 'running') return "Cancel";
-           else if (entity.state =='pause') return "Cancel";
+          [[[  if (entity.state.upper == 'RUNNING') return "Cancel";
+           else if (entity.state.upper =='PAUSE') return "Cancel";
           else return '';  ]]]
         confirmation:
           text: Cancel Print?
         state:
+          - value: RUNNING
+            icon: mdi:cancel
+            color: red
           - value: running
+            icon: mdi:cancel
+            color: red
+          - value: PAUSE
             icon: mdi:cancel
             color: red
           - value: pause
             icon: mdi:cancel
             color: red
+          - value: OFFLINE
+            icon: mdi:void
+            color: grey
           - value: offline
+            icon: mdi:void
+            color: grey
+          - value: IDLE
             icon: mdi:void
             color: grey
           - value: idle
             icon: mdi:void
             color: grey
+          - value: FAILED
+            icon: mdi:void
+            color: grey
           - value: failed
             icon: mdi:void
             color: grey
+          - value: FINISH
+            icon: mdi:void
+            color: grey
           - value: finish
+            icon: mdi:void
+            color: grey
+          - value: PREPARE
             icon: mdi:void
             color: grey
           - value: prepare
@@ -223,7 +266,7 @@ cards:
             color: grey
         tap_action:
           action: >
-            [[[ if (entity.state == 'running' || entity.state == 'pause') return
+            [[[ if (entity.state.upper == 'RUNNING' || entity.state.upper == 'PAUSE') return
             "call-service";  else return "none"; ]]]
           service: button.press
           service_data:
@@ -234,6 +277,6 @@ cards:
               box-shadow: none !important;
               background-color: rgba(0,0,0,0);
               border: none;
-              --paper-item-icon-color: {% if is_state('sensor.{HA_PRINTER_DEVICE_NAME}_print_status', 'running') or is_state('sensor.{HA_PRINTER_DEVICE_NAME}_print_status', 'pause') %} red; {% else %} grey; {% endif %}
+              --paper-item-icon-color: {% if is_state('sensor.{HA_PRINTER_DEVICE_NAME}_print_status', 'RUNNING') or is_state('sensor.{HA_PRINTER_DEVICE_NAME}_print_status', 'PAUSE') or is_state('sensor.{HA_PRINTER_DEVICE_NAME}_print_status', 'running') or is_state('sensor.{HA_PRINTER_DEVICE_NAME}_print_status', 'pause') %} red; {% else %} grey; {% endif %}
             }
 
