--- a/files/homeassistant/hacs_version/print_details.yaml
+++ b/files/homeassistant/hacs_version/print_details.yaml
@@ -44,7 +44,7 @@ cards:
                   name: Remaining Time
                 - entity: binary_sensor.{HA_PRINTER_DEVICE_NAME}_firmware_update
                   name: Firmware
-                - entity: sensor.{HA_PRINTER_DEVICE_NAME}_active_tray
+                - entity: sensor.{HA_PRINTER_DEVICE_NAME}_active_tray_2
                   name: Current Filament
         attributes:
           label: Details
