Minor UI changes after owner review

--- a/files/homeassistant/hacs_version/individual_control.yaml
+++ b/files/homeassistant/hacs_version/individual_control.yaml
@@ -32,12 +32,13 @@ cards:
       icon:
         - width: |
             [[[
-              if (entity) return '50px';
+              if (entity) return '65px';
               else return '0px';
             ]]]
+        - padding-left: 20px
       name:
         - text-wrap: balance
-        - font-weight: bold
+        - font-size: 1.4em
     card_mod:
       style: |
         ha-card {
