--- a/files/homeassistant/nodered_version/individual_control.yaml
+++ b/files/homeassistant/nodered_version/individual_control.yaml
@@ -1,48 +1,51 @@
 type: vertical-stack
 cards:
-  - type: horizontal-stack
-    cards:
-      - type: conditional
-        conditions:
-          - condition: state
-            entity: switch.{HA_PRINTER_SMARTPLUG_NAME}
-            state: unavailable
-        card:
-          type: custom:gap-card
-      - type: conditional
-        conditions:
-          - condition: state
-            entity: switch.{HA_PRINTER_SMARTPLUG_NAME}
-            state_not: unavailable
-        card:
-          type: custom:button-card
-          show_name: false
-          show_icon: true
-          tap_action:
-            action: toggle
-          entity: switch.{HA_PRINTER_SMARTPLUG_NAME}
-          icon: mdi:printer-3d
-          confirmation:
-            text: Toggle Printer Power?
-          state:
-            - value: 'on'
-              icon: mdi:power
-              color: green
-            - value: 'off'
-              icon: mdi:power
-              color: grey
-          aspect_ratio: 2
-          card_mod:
-            style: |
-              ha-card {
-                background: rgba(0,0,0,0);
-                border: none;
-                box-shadow: none !important;
-              }
-      - type: custom:mushroom-title-card
-        title: {PRINTER_TITLE}
-        alignment: center
-      - type: custom:gap-card
+  - type: custom:button-card
+    entity: switch.{HA_PRINTER_SMARTPLUG_NAME}
+    name: {PRINTER_TITLE}
+    icon: mdi:printer-3d
+    show_icon: true
+    show_state: false
+    layout: icon_name
+    tap_action:
+      action: |
+        [[[
+          if (entity) return 'toggle';
+          else return 'none';
+        ]]]
+    confirmation:
+      text: Toggle Printer Power?
+    state:
+      - value: 'on'
+        icon: mdi:power
+        color: green
+      - value: 'off'
+        icon: mdi:power
+        color: grey
+    styles:
+      grid:
+        - grid-template-columns: |
+            [[[
+              if (entity) return '20% 1fr 20%';
+              else return '20% 1fr 20%';
+            ]]]
+      icon:
+        - width: |
+            [[[
+              if (entity) return '65px';
+              else return '0px';
+            ]]]
+        - padding-left: 20px
+      name:
+        - text-wrap: balance
+        - font-size: 1.4em
+    card_mod:
+      style: |
+        ha-card {
+          background: rgba(0,0,0,0);
+          border: none;
+          box-shadow: none !important;
+        }
   - type: custom:gap-card
     height: 5
   - type: custom:hui-element
