--- a/files/homeassistant/nodered_version/individual_printer_image_x1e.yaml
+++ b/files/homeassistant/nodered_version/individual_printer_image_x1e.yaml
@@ -5,6 +5,19 @@ elements:
       - entity: sensor.{HA_PRINTER_DEVICE_NAME}_print_status
         state_not: OFFLINE
     elements:
+      - type: conditional
+        conditions:
+          - entity: sensor.{HA_PRINTER_DEVICE_NAME}_door
+            state: open
+        elements:
+          - entity: sensor.{HA_PRINTER_DEVICE_NAME}_door
+            type: state-icon
+            style:
+              top: 50.5%
+              left: 83.5%
+              '--mdc-icon-size': 3em
+              '--paper-item-icon-color': '#E7A332'
+            icon: mdi:alert
       - entity: light.{HA_PRINTER_DEVICE_NAME}_chamber_light
         type: state-icon
         style:
