--- a/files/homeassistant/blueprints/hacs/bambu_nr_auto_bentobox_fans_hacs.yaml
+++ b/files/homeassistant/blueprints/hacs/bambu_nr_auto_bentobox_fans_hacs.yaml
@@ -104,6 +104,7 @@ action:
           - condition: and
             conditions:
               - condition: not
+                conditions:
                   - condition: state
                     entity_id: !input filament_sensor
                     state: unavailable
