Fix empty AMS Tray in YAML, add ignore error code to bp

--- a/files/homeassistant/nodered_version/external_spool.yaml
+++ b/files/homeassistant/nodered_version/external_spool.yaml
@@ -7,7 +7,7 @@ elements:
       type: state-icon
       entity: sensor.{HA_PRINTER_DEVICE_NAME}_vt_tray
       icon: >-
-        ${states['sensor.{HA_PRINTER_DEVICE_NAME}_vt_tray'].state != 'Empty' ?
+        ${states['sensor.{HA_PRINTER_DEVICE_NAME}_vt_tray'].state.toLowerCase() != 'empty' ?
         'fapro:filament-1' : 'mdi:tray' }
     style:
       top: 50%
