--- a/files/homeassistant/nodered_version/individual_printer_image_p1s.yaml
+++ b/files/homeassistant/nodered_version/individual_printer_image_p1s.yaml
@@ -5,6 +5,26 @@ elements:
       - entity: sensor.{HA_PRINTER_DEVICE_NAME}_print_status
         state_not: OFFLINE
     elements:
+      - type: custom:config-template-card
+        entities:
+          - sensor.{HA_PRINTER_DEVICE_NAME}_wifi_signal
+        element:
+          type: state-icon
+          entity: sensor.{HA_PRINTER_DEVICE_NAME}_wifi_signal
+          icon: >-
+            ${states['sensor.{HA_PRINTER_DEVICE_NAME}_wifi_signal'].state > -50 ?
+          'mdi:wifi-strength-4' :
+            states['sensor.{HA_PRINTER_DEVICE_NAME}_wifi_signal'].state > -60 ?
+          'mdi:wifi-strength-3' :
+            states['sensor.{HA_PRINTER_DEVICE_NAME}_wifi_signal'].state > -67 ?
+          'mdi:wifi-strength-2' :
+            states['sensor.{HA_PRINTER_DEVICE_NAME}_wifi_signal'].state > -70 ?
+          'mdi:wifi-strength-1' : 'mdi:wifi-strength-outline'}
+          style:
+            left: 80%
+            top: 10%
+            font-size: 0.8em
+            color: rgba(0,0,0,0)
       - entity: light.{HA_PRINTER_DEVICE_NAME}_chamber_light
         type: state-icon
         style:
