misc changes for other updates

--- a/files/homeassistant/blueprints/nodered/bambu_nr_auto_bentobox_fans.yaml
+++ b/files/homeassistant/blueprints/nodered/bambu_nr_auto_bentobox_fans.yaml
@@ -90,6 +90,13 @@ action:
                   seconds: 30
               - condition: state
                 entity_id: !input filament_sensor
+                state: Not Set
+                for:
+                  hours: 0
+                  minutes: 0
+                  seconds: 30
+              - condition: state
+                entity_id: !input filament_sensor
                 state: None
                 for:
                   hours: 0
