--- a/.github/workflows/discord.yml
+++ b/.github/workflows/discord.yml
@@ -10,9 +10,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Github Releases To Discord
-        uses: sillyangel/releases-to-discord@v1
+        uses: SethCohen/github-releases-to-discord@v1
         with:
           webhook_url: ${{ secrets.WEBHOOK_URL_BAMBU }}
           color: "2105893"
           username: "Release Changelog"
-          avatar_url: "https://cdn.discordapp.com/avatars/487431320314576937/bd64361e4ba6313d561d54e78c9e7171.png"
+          content: "New Release for Bambu HomeAssistant Flows!"
+          footer_title: "Changelog"
+          footer_timestamp: true
+          max_description: '4096'
+          reduce_headings: true
