--- a/.github/workflows/discord.yml
+++ b/.github/workflows/discord.yml
@@ -25,7 +25,7 @@ jobs:
               "url": "https://github.com/${{ github.actor_id }}",
               "icon_url": "https://avatars.githubusercontent.com/u/${{ github.actor_id }}?v=4"
             },
-            "url": "https://github.com/$GITHUB_REPOSITORY"
+            "url": "https://github.com/${{ github.repository }}"
           }
         ]
         }' ${{ secrets.WEBHOOK_URL_BAMBU }})
