--- a/.github/workflows/media_archive.yml
+++ b/.github/workflows/media_archive.yml
@@ -21,3 +21,17 @@ jobs:
           path: /home/runner/work/Bambu-HomeAssistant-Flows/Bambu-HomeAssistant-Flows/files/media/
           if-no-files-found: error 
           retention-days: 20
+      - name: Zip for Nightly
+        run: | 
+          zip -r bambu-ha-media-files.zip  /home/runner/work/Bambu-HomeAssistant-Flows/Bambu-HomeAssistant-Flows/files/media/
+      - name: Release nightly
+        uses: softprops/action-gh-release@v2
+        with:
+          token: ${{ secrets.BHAF_GITHUB_TOKEN }}
+          prerelease: true
+          name: nightly
+          tag_name: nightly
+          files: bambu-ha-media-files.zip
+          fail_on_unmatched_files: true
+          
+          
