--- a/.github/workflows/discord.yml
+++ b/.github/workflows/discord.yml
@@ -14,6 +14,7 @@ jobs:
       with:
         fetch-depth: 0
     - name: Send a request to webhook
+      if: true && !startsWith(github.ref, 'refs/tags/nightly')
       run: |
         LATEST_TAG=$(git describe --tags `git rev-list --tags --max-count=1`)
         RESPONSE=$(curl -H "Content-Type: application/json" -X POST -d '{
