--- a/.github/workflows/media_archive.yml
+++ b/.github/workflows/media_archive.yml
@@ -23,7 +23,10 @@ jobs:
           retention-days: 20
       - name: Zip for Nightly
         run: | 
-          zip -r bambu-ha-media-files.zip  /home/runner/work/Bambu-HomeAssistant-Flows/Bambu-HomeAssistant-Flows/files/media/*
+          cd /home/runner/work/Bambu-HomeAssistant-Flows/Bambu-HomeAssistant-Flows/files/media/
+          zip -r bambu-ha-media-files.zip ./*
+          cd -
+          mv /home/runner/work/Bambu-HomeAssistant-Flows/Bambu-HomeAssistant-Flows/files/media/bambu-ha-media-files.zip ./
       - name: Release nightly
         uses: softprops/action-gh-release@v2
         with:
