--- a/files/homeassistant/blueprints/nodered/bambu_nr_auto_bentobox_fans.yaml
+++ b/files/homeassistant/blueprints/nodered/bambu_nr_auto_bentobox_fans.yaml
@@ -196,7 +196,9 @@ blueprint:
           mode: slider
     delay_bento_off:
       name: Delay Turning Bentobox Off
-      description: "Time to wait after Print Status is `FINISH`, `IDLE`, `FALILED` \nor Printer Filament is `None` or `Not Set`\n to turn off bentobox"
+      description: |
+                    Time to wait after Print Status is `FINISH`, `IDLE`, `FALILED`
+                    or Printer Filament is `None` or `Not Set` to turn off bentobox
       default: 
         hours: 0
         minutes: 0
