--- a/files/homeassistant/blueprints/hacs/bambu_nr_auto_bentobox_fans_hacs.yaml
+++ b/files/homeassistant/blueprints/hacs/bambu_nr_auto_bentobox_fans_hacs.yaml
@@ -23,28 +23,19 @@ trigger:
       - !input print_status
     from: null
     to: finish
-    for:
-      hours: 0
-      minutes: 0
-      seconds: 30
+    for: !input delay_bento_off
   - platform: state
     entity_id:
       - !input print_status
     from: null
     to: failed
-    for:
-      hours: 0
-      minutes: 0
-      seconds: 30
+    for: !input delay_bento_off
   - platform: state
     entity_id:
       - !input print_status
     from: null
     to: idle
-    for:
-      hours: 0
-      minutes: 0
-      seconds: 30
+    for: !input delay_bento_off
   - platform: state
     entity_id:
       - !input print_status
@@ -63,17 +54,11 @@ action:
               - condition: state
                 entity_id: !input print_status
                 state: finish
-                for:
-                  hours: 0
-                  minutes: 0
-                  seconds: 30
+                for: !input delay_bento_off
               - condition: state
                 entity_id: !input print_status
                 state: idle
-                for:
-                  hours: 0
-                  minutes: 0
-                  seconds: 30
+                for: !input delay_bento_off
               - condition: state
                 entity_id: !input print_status
                 state: offline
@@ -84,31 +69,19 @@ action:
               - condition: state
                 entity_id: !input print_status
                 state: failed
-                for:
-                  hours: 0
-                  minutes: 0
-                  seconds: 30
+                for: !input delay_bento_off
               - condition: state
                 entity_id: !input filament_sensor
                 state: unavailable
-                for:
-                  hours: 0
-                  minutes: 0
-                  seconds: 30
+                for: !input delay_bento_off
               - condition: state
                 entity_id: !input filament_sensor
                 state: none
-                for:
-                  hours: 0
-                  minutes: 0
-                  seconds: 30
+                for: !input delay_bento_off
               - condition: state
                 entity_id: !input filament_sensor
                 state: empty
-                for:
-                  hours: 0
-                  minutes: 0
-                  seconds: 30
+                for: !input delay_bento_off
               - condition: template
                 value_template: "{{state_attr(filament_s, 'type') == 'empty'}}"
               - condition: template
@@ -152,10 +125,26 @@ action:
               - condition: template
                 value_template: "{{state_attr(filament_s, 'type') in filament_li}}"
         sequence:
-          - service: homeassistant.turn_on
-            target:
-              entity_id: !input bento_entity
-            data: {}
+          - repeat:
+              for_each: !input bento_entity
+              sequence:
+                - choose:
+                    - conditions:
+                        - condition: template
+                          value_template: >
+                            {{ repeat.item.startswith('fan.') and
+                              (state_attr(repeat.item, 'supported_features') | int(0) | bitwise_and(1) > 0) }}
+                      sequence:
+                        - service: fan.set_percentage
+                          target:
+                            entity_id: "{{ repeat.item }}"
+                          data:
+                            percentage: !input fan_speed
+                  default:
+                    - service: homeassistant.turn_on
+                      target:
+                        entity_id: "{{ repeat.item }}"
+                      data: {}
 
 blueprint:
   name: "[BAMBU] Automate Bentobox Filtration"
@@ -212,6 +201,29 @@ blueprint:
             domain: 
               - switch
               - fan
+          multiple: true
+    fan_speed:
+      name: Fan Speed
+      description: Fan speed (%) to use if the selected entity is a `fan` & supports speed control.
+      default: 100
+      selector:
+        number:
+          min: 0
+          max: 100
+          step: 1
+          unit_of_measurement: "%"
+          mode: slider
+    delay_bento_off:
+      name: Delay Turning Bentobox Off
+      description: |
+                    Time to wait after Print Status is `FINISH`, `IDLE`, `FALILED`
+                    or Printer Filament is `None` or `Not Set` to turn off bentobox
+      default: 
+        hours: 0
+        minutes: 0
+        seconds: 30
+      selector:
+        duration: {}
     filament_list:
       name: Enabled Filaments
       description: |
